hard-gists/2998372/run.log
=== Docker Run Log for 2998372 ===
Started at: Mi 29. Okt 13:23:45 CET 2025

[2025-10-29 13:23:45] START: Running container for 2998372
[2025-10-29 13:23:45] SUCCESS: Container 409633d6b44f562e2ed1baab249b04b9e0f4a3effb20267d7deaf320d8672e0d started for 2998372
=== Container logs for 2998372 ===
  File "/snippet.py", line 6
    print "Usage: python mousemove.py dx dy speed"
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 2998372 ===
[2025-10-29 13:23:47] INFO: Container 409633d6b44f562e2ed1baab249b04b9e0f4a3effb20267d7deaf320d8672e0d has stopped
